--- a/README
+++ b/README
@@ -2,3 +2,6 @@ study kernel module development.
 
 useful address
 http://www.cs.fsu.edu/~baker/devices/lxr/http/source/
+
+kernel module document
+http://www.kernel.org/doc/Documentation/
